--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "technotes MERN project",
   "main": "server.js",
   "scripts": {
-    "start": "node server", 
+    "start": "node server",
     "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "date-fns": "^2.29.3",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   }
 }
